[package]
name = "comparer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
indicatif = "0.17.0"
parking_lot = "0.12.1"
rand = "0.8.5"
tokio = { version = "1.21.0", features = ["full"] }
